# FastAPI-Bootcamp-Workout

./: Makefile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 00bf902eea5a_corrigindo_erro_created.py  7723ee24cf94_init_db.py
workout_api/: main.py  routers.py
workout_api/atleta/: controller.py  models.py  schemas.py
workout_api/categorias/: controller.py  models.py  schemas.py
workout_api/centro_treinamento/: controller.py  models.py  schemas.py
workout_api/contrib/: dependecies.py  schemas.py
